--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&family=Nunito&display=swap" rel="stylesheet">
+
+    <title>words per hour</title>
   </head>
   <body>
+
+    <div class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +43,34 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+<script src="/__/firebase/7.15.5/firebase-app.js"></script>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
+<script src="/__/firebase/7.15.5/firebase-auth.js"></script>
+<script src="/__/firebase/7.15.5/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+  apiKey: "AIzaSyBGPNzvcHt_mB2IgXIdKkawMrUG4kEs91U",
+  authDomain: "wordsperhour.firebaseapp.com",
+  databaseURL: "https://wordsperhour.firebaseio.com",
+  projectId: "wordsperhour",
+  storageBucket: "wordsperhour.appspot.com",
+  messagingSenderId: "868587979572",
+  appId: "1:868587979572:web:f183699ca67b1f31dedb61",
+  measurementId: "G-1QQLPWNEFH"
+};
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+</div>
+<div class="messagedesktop">please view in full screen</div>
+<div class="messagemobile">please view on desktop</div>
   </body>
 </html>
